fixes alignment issues with form field labels that have tooltips

--- a/ui/app/styles/core/label.scss
+++ b/ui/app/styles/core/label.scss
@@ -7,9 +7,10 @@
 
 .is-label {
   color: $grey-darkest;
-  display: inline-block;
   font-size: 14px;
   font-weight: $font-weight-bold;
+  display: flex;
+  align-items: center;
 
   &:not(:last-child) {
     margin-bottom: 0.25rem;
